2000-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (read): New overloaded method to read an image
 	based on an array of raw pixels, of specified type and mapping, in
 	memory.
	(write): New overloaded method to write image to an array of
 	pixels, of specified type and mapping.
	(Image): New overloaded constructor to construct an image based on
 	an array of raw pixels, of specified type and mapping, in memory.

2000-09-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (colorize): API change to match change in
 	ImageMagick.  Now accepts percentage of red, green, and blue to
 	colorize with using specified pen color.

2000-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/Drawable.h: Reverted Coordinate implemenation back
 	from and STL pair based implementation to a simple class.  Maybe
 	this will improve portability.  It is more understandable anyway.

2000-09-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Options.cpp : Bugfix.  Some DrawInfo attributes were not
 	being updated.  This lead to options like fontPointsize not
 	changing the font.

2000-08-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Magick++/STL.h (blurImage, charcoalImage, embossImage,
 	sharpenImage): Expand order_ argument to radius_ & sigma_
 	arguments for more control (matches ImageMagick API change).

	* lib/Image.cpp (blur, charcoal, emboss, sharpen): Expand order_
 	argument to radius_ & sigma_ arguments for more control (matches
 	ImageMagick API change).

2000-08-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* lib/Image.cpp (read): Check returned Image for embedded
 	exception, as well as the existing parameter check.  This fixes
 	the bug that warnings are not reported.

2000-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* test/*.cpp demo/*.cpp: Added call to MagickIncarnate() to set
 	ImageMagick install location for Windows.  Hopefully this hack can