@@ -190,9 +190,11 @@ is filled.</font></td>
 <center><a NAME="DrawableImage"></a><font size=-1>DrawableImage</font></center>
 </td>
 
-<td><font size=-1>double x_, double y_, const string &amp;image_</font></td>
+<td><font size=-1>double x_, double y_, double width_, double height_,
+const string &amp;image_</font></td>
 
-<td><font size=-1>Composite image (file) with image file at specified coordinates.</font></td>
+<td><font size=-1>Composite image (file) with image file, rendered with
+specified width and height, at specified coordinates.</font></td>
 </tr>
 
 <tr>
